# Control_in_Image_Diffusion

./: .gitignore  README.md  main.tex  pyproject.toml  references.bib
figures/final_stage/: recommended_samples.json
notebooks/: midway_results.ipynb
outputs/combined_experiments/final_eval_1000_conflict/: pairwise_summary.csv  per_sample_metrics.csv  search_summary.csv  selected_modes.json  summary.json
outputs/combined_experiments/search_100_conflict/: per_sample_metrics.csv  search_summary.csv
outputs/combined_experiments/search_100_conflict_smooth/: best_config.json  progressive_search_trace.csv  search_summary.csv
outputs/combined_experiments/slide_selected_curated/: selected_cases_resolution.csv  selected_cases_resolution.json  summary.csv  summary.json
outputs/midway_baselines/metrics/: summary.json
scripts/: build_final_results_notebook.py  download_assets.py  export_selected_slide_candidates.py  monitor_final_run.py  prepare_coco_subset.py  run_baselines.py  run_combined_experiments.py  run_final_experiments.py  run_smooth_schedule_search.py
src/midway_project/: __init__.py  callbacks.py  data.py  experiments.py  final_stage.py  metrics.py  models.py  reporting.py  schedules.py  settings.py
